test: elevar cobertura esencial sobre 90 por servicio